# 1D_thouless_pumping

./: .gitignore  CLAUDE.md  CMakeLists.txt  main.cpp  main_2gaussian.cpp  main_2ninteraction.cpp  vs3_n2_ecg_grid_comparison.html  vs3_n2_gate1_shortwin_k48_live_report.html  vs3_n2_gate1_shortwin_live_report.html  vs3_n2_k32_full_depth_schedule_live_report.html  vs3_n2_k32_success_roadmap_report.html  vs3_n2_k32_sweep_fine20_Aseed0p05_rcond1em5_live_report.html  vs3_n2_k32_sweep_fine20_COMdiag_rcond1em4_live_report.html  vs3_n2_k32_sweep_fine20_COMdiag_rcond1em5_live_report.html  vs3_n2_k32_sweep_fine20_live_report.html  vs3_n2_k32_sweep_fine20_rcond1em5_live_report.html  vs3_n2_k32_sweep_fine20_rcond1em6_live_report.html  vs3_n2_k32_sweep_fine5_live_report.html  vs3_n2_k32_sweep_full20_live_report.html  vs3_n2_k32_sweep_full20_repeat_live_report.html  vs3_n2_k32_sweep_live_report.html  vs3_vl3_gaussian_t0_wavefunction.html
2gaussian_src/: gaussian_terms.cpp  gaussian_terms.hpp  vs3_n2_k32_failure_analysis_report.html
2gaussian_src/.ipynb_checkpoints/: vs3_n2_k32_failure_analysis_report-checkpoint.html
html/: vs3_n2_k32_full20_health_snapshot.html  vs3_n2_k32_sweep_fine20_Aseed0p05_rcond1em4_live_report.html  vs3_n2_k32_sweep_fine20_live_report.html  vs3_n2_k32_sweep_fine20_rcond1em5_live_report.html  vs3_n2_k32_sweep_full20_live_report.html  vs3_n2_k32_sweep_live_report.html  vs3_n2_k32_sweep_staged_live_report.html
html/.ipynb_checkpoints/: vs3_n2_ecg_grid_comparison-checkpoint.html  vs3_n2_k32_sweep_fine20_live_report-checkpoint.html  vs3_n2_k32_sweep_fine5_live_report-checkpoint.html  vs3_n2_k32_sweep_full20_live_report-checkpoint.html  vs3_n2_k32_sweep_live_report-checkpoint.html  vs3_n2_k32_sweep_staged_live_report-checkpoint.html
initial_state/Vs10Ers_Vl5Ers/: initial_lohse_N1_K16.csv  initial_lohse_N2_K24.csv
initial_state/Vs3Er_Vl3Er/: initial_pathpad_N2_K24.csv  initial_pathpad_N2_K32.csv  initial_pathpad_N2_K32_Aseed0p05.csv  initial_pathpad_N2_K32_COMdiag.csv  initial_pathpad_N2_K48_richunion.csv
nointeraction_src/: pump_common.cpp  pump_common.hpp
pumpconfig/: legacy_prb_3_3.cpp  legacy_prb_3_3.hpp  lohse_10_5.cpp  lohse_10_5.hpp  lohse_n2_free.cpp  lohse_n2_free.hpp  lohse_n2_gauss.cpp  lohse_n2_gauss.hpp  pump_config.cpp  pump_config.hpp
rice_mele_reference/: check_occupancy_gate_parking.py  make_vs3_n2_ecg_grid_report.py  make_vs3_n2_gate1_shortwin_k48_live_report.py  make_vs3_n2_gate1_shortwin_live_report.py  make_vs3_n2_k32_full_depth_schedule_live_report.py  make_vs3_n2_k32_sweep_fine20_Aseed0p05_rcond1em4_live_report.py  make_vs3_n2_k32_sweep_fine20_Aseed0p05_rcond1em5_live_report.py  make_vs3_n2_k32_sweep_fine20_COMdiag_rcond1em4_live_report.py  make_vs3_n2_k32_sweep_fine20_COMdiag_rcond1em5_live_report.py  make_vs3_n2_k32_sweep_fine20_live_report.py  make_vs3_n2_k32_sweep_fine20_rcond1em5_live_report.py  make_vs3_n2_k32_sweep_fine20_rcond1em6_live_report.py  make_vs3_n2_k32_sweep_fine5_live_report.py  make_vs3_n2_k32_sweep_full20_live_report.py  make_vs3_n2_k32_sweep_full20_repeat_live_report.py  make_vs3_n2_k32_sweep_live_report.py  make_vs3_n2_k32_sweep_staged_live_report.py  make_vs3_vl3_gaussian_t0_wavefunction_html.py  plot_vs3_n2_grid_partial.py  plot_vs3_n2_initial_state.py  refresh_vs3_n2_k32_reports.py  watch_vs3_n2_k32_full_depth_schedule_live_report.py
slurm/: dtscan_lohse.sbatch  n2_validation.sbatch
src/: basis_params.cpp  basis_params.hpp  csv_utils.cpp  csv_utils.hpp  derivatives.cpp  hamiltonian.cpp  hamiltonian_gradient.cpp  hamiltonian_gradient.hpp  interaction_kernels.cpp  interaction_kernels.hpp  observable_derivatives.cpp  observable_derivatives.hpp  pair_cache.cpp  pair_cache.hpp  physical_constants.hpp  progress_output_n1.cpp  progress_output_n2.cpp  realtime_tdvp.cpp  realtime_tdvp.hpp  run_report.cpp  run_report.hpp  snapshot_io.cpp  snapshot_io.hpp  tdvp_solver.cpp  tdvp_solver.hpp  trace_io.cpp  trace_io.hpp
tmp/: summarize_time_table.py  time_summary.md  time_summary_all.csv
txt_task/: ecg1d_2gaussian_20260708.sbatch  ecg1d_2gaussian_Aactive_20260708.sbatch  ecg1d_2ninteraction_20260708.sbatch  ecg1d_64core_bench.cpp  ecg1d_64core_bench_20260708.sbatch  ecg1d_cache_hermitian_threads_20260709.sbatch  ecg1d_cache_hermitian_validate.cpp  ecg1d_gauss_gradient_check.cpp  ecg1d_legacy_prb_3_3_300step.cpp  ecg1d_legacy_prb_3_3_300step_8thread_20260709.sbatch  ecg1d_vs3_n2_64core_bench.cpp  ecg1d_vs3_n2_64core_bench_20260708.sbatch  ecg1d_vs3_n2_64core_bench_gradcache_20260708.sbatch  ecg1d_vs3_n2_K32_dt001_free_20260709.sbatch  ecg1d_vs3_n2_K32_dt001_gauss_20260709.sbatch  ecg1d_vs3_n2_K32_fine20_Aseed0p05_rcond1em4_free_sigma1_20260710.sbatch  ecg1d_vs3_n2_K32_fine20_Aseed0p05_rcond1em5_free_sigma1_20260710.sbatch  ecg1d_vs3_n2_K32_fine20_COMdiag_rcond1em4_free_sigma1_20260710.sbatch  ecg1d_vs3_n2_K32_fine20_COMdiag_rcond1em5_free_sigma1_20260710.sbatch  ecg1d_vs3_n2_K32_fine20_rcond1em5_free_sigma1_20260709.sbatch  ecg1d_vs3_n2_K32_fine20_rcond1em6_free_sigma1_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_A_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_B_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_fine20_A_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_fine20_B_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_fine5_A_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_fine5_B_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_full20_G1_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_full20_G2_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_full20_G3_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_full20_G4_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_full20_repeat_G1_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_full20_repeat_G2_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_full20_repeat_G3_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_full20_repeat_G4_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_staged_G1_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_staged_G2_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_staged_G3_20260709.sbatch  ecg1d_vs3_n2_K32_width_sweep_staged_G4_20260709.sbatch  (+32 more)
(+203 files in other folders)
